--- a/Stage-one/jiugongge.html
+++ b/Stage-one/jiugongge.html
@@ -3,29 +3,27 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Document</title>
 </head>
 <style>
     body {
         font-size: 62.5%;
         margin: 0;
-        padding: 0;
     }
     .box {
-        display: flex;
-        flex-direction: column; 
-        justify-content: center;
+        margin: 1em 0 0 1em;
     }
     .row {
         display: flex;
-        flex: 0 1 auto;
     }
-    .row div {
-        width: 25em;
-        height: 25em;
-        margin: 1em;
-        border-radius: 2em;
+    .item {
+        display: inline-block;
+        width: 30%; 
+        padding: 30% 0 0 0;
+        border-radius: 1em;
+        margin: 0 1em 1em 0;
+        justify-content: center;
         background-color: orange;
     }
 </style>
@@ -33,19 +31,19 @@
 <body>
     <div class="box">
         <div class="row">
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
         </div>
         <div class="row">
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
         </div>
         <div class="row">
-            <div class="item"></div>
-            <div class="item"></div>
-            <div class="item"></div>
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
         </div>
     </div>
 </body>
