--- a/Stage-one/jiugongge.html
+++ b/Stage-one/jiugongge.html
@@ -12,10 +12,12 @@
         margin: 0;
     }
     .box {
+        width: auto;
         margin: 1em 0 0 1em;
     }
     .row {
         display: flex;
+        justify-content: center;
     }
     .item {
         display: inline-block;
@@ -23,7 +25,6 @@
         padding: 30% 0 0 0;
         border-radius: 1em;
         margin: 0 1em 1em 0;
-        justify-content: center;
         background-color: orange;
     }
 </style>
