--- a/cssXZ/Stage-one/yidongduan/yidongduan.html
+++ b/cssXZ/Stage-one/yidongduan/yidongduan.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <div class="back">返回</div>
+        <div class="back-btn">返回</div>
         <div class="title">魔镜</div>
         <div class="menu">。。。</div>
     </header>
