阶段二任务三修改

--- a/cssXZ/Stage-two/mylist/mylist.html
+++ b/cssXZ/Stage-two/mylist/mylist.html
@@ -29,13 +29,32 @@
         <nav>
             <div class="nav-select">
                 <div class="nav-item">
-                    <div class="nav-item-left">所在地</div><span class="triangle"></span></div>
+                    <div class="nav-item-left">所在地</div><span class="triangle"></span>
+                </div>
+
                 <div class="nav-item module">
-                    <div class="nav-item-left">食宿</div><span class="triangle"></span></div>
+                    <div class="nav-item-left">食宿</div><span class="triangle"></span>
+                </div>
+
                 <div class="nav-item">
-                    <div class="nav-item-left">病人情况</div><span class="triangle"></span></div>
+                    <div class="nav-item-left">病人情况</div><span class="triangle"></span>
+                </div>
             </div>
         </nav>
+        <div class="select-list">
+            <ul class="list1" style="visibility:hidden">
+                <li>北京</li>
+                <li>上海</li>
+            </ul>
+            <ul class="list2" style="visibility:hidden">
+                <li>一日三餐</li>
+                <li>三餐一日</li>
+            </ul>
+            <ul class="list3" style="visibility:hidden">
+                <li>良好</li>
+                <li>正常</li>
+            </ul>
+        </div>
     </header>
     <main>
         <div class="listgroups">
@@ -48,108 +67,8 @@
                                 <div class="item-time">2015-7-5至2015-7-12</div>
                                 <p class="item-place">北京.通州.果园</p>
                             </div>
+                            <div class="item-right"><span class="work-price">25元/小时</span></div>
                         </div>
-                        <div class="item-right"><span class="work-price">25元/小时</span></div>
-                    </li>
-                    <li class="item-group">
-                        <div class="item">
-                            <div class="item-left">
-                                <p class="item-title">服务日期</p>
-                                <div class="item-time">2015-7-5至2015-7-12</div>
-                                <p class="item-place">北京.通州.果园</p>
-                            </div>
-                        </div>
-                        <div class="item-right"><span class="work-price">25元/小时</span></div>
-                    </li>
-                    <li class="item-group">
-                        <div class="item">
-                            <div class="item-left">
-                                <p class="item-title">服务日期</p>
-                                <div class="item-time">2015-7-5至2015-7-12</div>
-                                <p class="item-place">北京.通州.果园</p>
-                            </div>
-                        </div>
-                        <div class="item-right"><span class="work-price">25元/小时</span></div>
-                    </li>
-                    <li class="item-group">
-                        <div class="item">
-                            <div class="item-left">
-                                <p class="item-title">服务日期</p>
-                                <div class="item-time">2015-7-5至2015-7-12</div>
-                                <p class="item-place">北京.通州.果园</p>
-                            </div>
-                        </div>
-                        <div class="item-right"><span class="work-price">25元/小时</span></div>
-                    </li>
-                    <li class="item-group">
-                        <div class="item">
-                            <div class="item-left">
-                                <p class="item-title">服务日期</p>
-                                <div class="item-time">2015-7-5至2015-7-12</div>
-                                <p class="item-place">北京.通州.果园</p>
-                            </div>
-                        </div>
-                        <div class="item-right"><span class="work-price">25元/小时</span></div>
-                    </li>
-                    <li class="item-group">
-                        <div class="item">
-                            <div class="item-left">
-                                <p class="item-title">服务日期</p>
-                                <div class="item-time">2015-7-5至2015-7-12</div>
-                                <p class="item-place">北京.通州.果园</p>
-                            </div>
-                        </div>
-                        <div class="item-right"><span class="work-price">25元/小时</span></div>
-                    </li>
-                    <li class="item-group">
-                        <div class="item">
-                            <div class="item-left">
-                                <p class="item-title">服务日期</p>
-                                <div class="item-time">2015-7-5至2015-7-12</div>
-                                <p class="item-place">北京.通州.果园</p>
-                            </div>
-                        </div>
-                        <div class="item-right"><span class="work-price">25元/小时</span></div>
-                    </li>
-                    <li class="item-group">
-                        <div class="item">
-                            <div class="item-left">
-                                <p class="item-title">服务日期</p>
-                                <div class="item-time">2015-7-5至2015-7-12</div>
-                                <p class="item-place">北京.通州.果园</p>
-                            </div>
-                        </div>
-                        <div class="item-right"><span class="work-price">25元/小时</span></div>
-                    </li>
-                    <li class="item-group">
-                        <div class="item">
-                            <div class="item-left">
-                                <p class="item-title">服务日期</p>
-                                <div class="item-time">2015-7-5至2015-7-12</div>
-                                <p class="item-place">北京.通州.果园</p>
-                            </div>
-                        </div>
-                        <div class="item-right"><span class="work-price">25元/小时</span></div>
-                    </li>
-                    <li class="item-group">
-                        <div class="item">
-                            <div class="item-left">
-                                <p class="item-title">服务日期</p>
-                                <div class="item-time">2015-7-5至2015-7-12</div>
-                                <p class="item-place">北京.通州.果园</p>
-                            </div>
-                        </div>
-                        <div class="item-right"><span class="work-price">25元/小时</span></div>
-                    </li>
-                    <li class="item-group">
-                        <div class="item">
-                            <div class="item-left">
-                                <p class="item-title">服务日期</p>
-                                <div class="item-time">2015-7-5至2015-7-12</div>
-                                <p class="item-place">北京.通州.果园</p>
-                            </div>
-                        </div>
-                        <div class="item-right"><span class="work-price">25元/小时</span></div>
                     </li>
                     <li style="height:5rem;"></li>
                 </ul>
@@ -162,7 +81,9 @@
                 <div class="home"></div>
                 <p>首页</p>
             </div>
-            <div class="edit"><div class="tupian"></div></div>
+            <div class="edit">
+                <div class="tupian"></div>
+            </div>
             <div>
                 <div class="mine"></div>
                 <p>我的</p>
@@ -170,5 +91,53 @@
         </div>
     </footer>
 </body>
+<script>
+    var mylistitems = document.querySelectorAll(".nav-item")
+    var obj1 = document.getElementsByClassName("list1")[0]
+    var obj2 = document.getElementsByClassName("list2")[0]
+    var obj3 = document.getElementsByClassName("list3")[0]
+    var clickitem;
+    for (var i in mylistitems) {
+        if (i === '0') {
+            mylistitems[i].onclick = function (e) {
+                if (clickitem && clickitem != obj1) {
+                    clickitem.style.visibility = "hidden"
+                }
+                obj1.style.visibility = "visible"
+                clickitem = obj1
+                console.log(clickitem)
+                e.stopPropagation();
+            }
+        }
+        if (i === '1') {
+            mylistitems[i].onclick = function (e) {
+                if (clickitem && clickitem != obj2) {
+                    clickitem.style.visibility = "hidden"
+                }
+                obj2.style.visibility = "visible"
+                clickitem = obj2
+                console.log(clickitem)
+                e.stopPropagation();
+            }
+        }
+        if (i === '2') {
+            mylistitems[i].onclick = function (e) {
+                if (clickitem && clickitem != obj3) {
+                    clickitem.style.visibility = "hidden"
+                }
+                obj3.style.visibility = "visible"
+                clickitem = obj3
+                console.log(clickitem)
+                e.stopPropagation();
+            }
+        }
+    }
+    document.addEventListener('click', function (e) {
+        obj1.style.visibility = 'hidden'
+        obj2.style.visibility = 'hidden'
+        obj3.style.visibility = 'hidden'
+    }, false);
+
+</script>
 
 </html>
