阶段二任务三修改

--- a/cssXZ/Stage-two/mylist/mylist.html
+++ b/cssXZ/Stage-two/mylist/mylist.html
@@ -70,6 +70,97 @@
                             <div class="item-right"><span class="work-price">25元/小时</span></div>
                         </div>
                     </li>
+                    <li class="item-group">
+                        <div class="item">
+                            <div class="item-left">
+                                <p class="item-title">服务日期</p>
+                                <div class="item-time">2015-7-5至2015-7-12</div>
+                                <p class="item-place">北京.通州.果园</p>
+                            </div>
+                            <div class="item-right"><span class="work-price">25元/小时</span></div>
+                        </div>
+                    </li>
+                    <li class="item-group">
+                        <div class="item">
+                            <div class="item-left">
+                                <p class="item-title">服务日期</p>
+                                <div class="item-time">2015-7-5至2015-7-12</div>
+                                <p class="item-place">北京.通州.果园</p>
+                            </div>
+                            <div class="item-right"><span class="work-price">25元/小时</span></div>
+                        </div>
+                    </li>
+                    <li class="item-group">
+                        <div class="item">
+                            <div class="item-left">
+                                <p class="item-title">服务日期</p>
+                                <div class="item-time">2015-7-5至2015-7-12</div>
+                                <p class="item-place">北京.通州.果园</p>
+                            </div>
+                            <div class="item-right"><span class="work-price">25元/小时</span></div>
+                        </div>
+                    </li>
+                    <li class="item-group">
+                        <div class="item">
+                            <div class="item-left">
+                                <p class="item-title">服务日期</p>
+                                <div class="item-time">2015-7-5至2015-7-12</div>
+                                <p class="item-place">北京.通州.果园</p>
+                            </div>
+                            <div class="item-right"><span class="work-price">25元/小时</span></div>
+                        </div>
+                    </li>
+                    <li class="item-group">
+                        <div class="item">
+                            <div class="item-left">
+                                <p class="item-title">服务日期</p>
+                                <div class="item-time">2015-7-5至2015-7-12</div>
+                                <p class="item-place">北京.通州.果园</p>
+                            </div>
+                            <div class="item-right"><span class="work-price">25元/小时</span></div>
+                        </div>
+                    </li>
+                    <li class="item-group">
+                        <div class="item">
+                            <div class="item-left">
+                                <p class="item-title">服务日期</p>
+                                <div class="item-time">2015-7-5至2015-7-12</div>
+                                <p class="item-place">北京.通州.果园</p>
+                            </div>
+                            <div class="item-right"><span class="work-price">25元/小时</span></div>
+                        </div>
+                    </li>
+                    <li class="item-group">
+                        <div class="item">
+                            <div class="item-left">
+                                <p class="item-title">服务日期</p>
+                                <div class="item-time">2015-7-5至2015-7-12</div>
+                                <p class="item-place">北京.通州.果园</p>
+                            </div>
+                            <div class="item-right"><span class="work-price">25元/小时</span></div>
+                        </div>
+                    </li>
+                    <li class="item-group">
+                        <div class="item">
+                            <div class="item-left">
+                                <p class="item-title">服务日期</p>
+                                <div class="item-time">2015-7-5至2015-7-12</div>
+                                <p class="item-place">北京.通州.果园</p>
+                            </div>
+                            <div class="item-right"><span class="work-price">25元/小时</span></div>
+                        </div>
+                    </li>
+                    <li class="item-group">
+                        <div class="item">
+                            <div class="item-left">
+                                <p class="item-title">服务日期</p>
+                                <div class="item-time">2015-7-5至2015-7-12</div>
+                                <p class="item-place">北京.通州.果园</p>
+                            </div>
+                            <div class="item-right"><span class="work-price">25元/小时</span></div>
+                        </div>
+                    </li>
+                    
                     <li style="height:5rem;"></li>
                 </ul>
             </div>
