--- a/cssXZ/Stage-two/mylist/mylist.html
+++ b/cssXZ/Stage-two/mylist/mylist.html
@@ -160,7 +160,16 @@
                             <div class="item-right"><span class="work-price">25元/小时</span></div>
                         </div>
                     </li>
-                    
+                    <li class="item-group">
+                        <div class="item">
+                            <div class="item-left">
+                                <p class="item-title">服务日期</p>
+                                <div class="item-time">2015-7-5至2015-7-12</div>
+                                <p class="item-place">北京.通州.果园</p>
+                            </div>
+                            <div class="item-right"><span class="work-price">25元/小时</span></div>
+                        </div>
+                    </li>
                     <li style="height:5rem;"></li>
                 </ul>
             </div>
@@ -196,7 +205,6 @@
                 }
                 obj1.style.visibility = "visible"
                 clickitem = obj1
-                console.log(clickitem)
                 e.stopPropagation();
             }
         }
@@ -207,7 +215,6 @@
                 }
                 obj2.style.visibility = "visible"
                 clickitem = obj2
-                console.log(clickitem)
                 e.stopPropagation();
             }
         }
@@ -218,7 +225,6 @@
                 }
                 obj3.style.visibility = "visible"
                 clickitem = obj3
-                console.log(clickitem)
                 e.stopPropagation();
             }
         }
