阶段二任务4修改

--- a/cssXZ/Stage-two/gamejingling/discover.html
+++ b/cssXZ/Stage-two/gamejingling/discover.html
@@ -22,7 +22,7 @@
                 <p class="prompt">发言讨论结束，大家请投票</p>
                 <div class="state-mp3">
                     <span class="player"></span>
-                    <audio src="./files/财富自由.mp3"></audio>
+                    <audio id="myaudio" src="./files/财富自由.mp3"></audio>
                 </div>
             </div>
             <span id="trangle"></span>
@@ -38,11 +38,11 @@
                             <span class="identity-name">水民</span>
                             <span class="item-count">1号</span>
                         </div>
-                        <div class="operation myturn">
-                            <span class="icon1"></span>
-                            <span class="icon2"></span>
-                            <span class="icon3"></span>
-                            <span class="icon4"></span>
+                        <div class="operation">
+                            <span class="icon-be icon1"></span>
+                            <span class="icon-be icon2"></span>
+                            <span class="icon-be icon3"></span>
+                            <span class="icon-be icon4"></span>
                         </div>
                     </div>
                     <div class="list-chair module-chair">
@@ -50,14 +50,24 @@
                             <span class="identity-name">水民</span>
                             <span class="item-count">2号</span>
                         </div>
-                        <div class="operation"></div>
+                        <div class="operation">
+                            <span class="icon-be icon1"></span>
+                            <span class="icon-be icon2"></span>
+                            <span class="icon-be icon3"></span>
+                            <span class="icon-be icon4"></span>
+                        </div>
                     </div>
                     <div class="list-chair">
                         <div class="identity">
                             <span class="identity-name">警察</span>
                             <span class="item-count">3号</span>
                         </div>
-                        <div class="operation"></div>
+                        <div class="operation">
+                            <span class="icon-be icon1"></span>
+                            <span class="icon-be icon2"></span>
+                            <span class="icon-be icon3"></span>
+                            <span class="icon-be icon4"></span>
+                        </div>
                     </div>
                 </li>
                 <li class="item-list">
@@ -66,21 +76,36 @@
                             <span class="identity-name">水民</span>
                             <span class="item-count">1号</span>
                         </div>
-                        <div class="operation"></div>
+                        <div class="operation">
+                            <span class="icon-be icon1"></span>
+                            <span class="icon-be icon2"></span>
+                            <span class="icon-be icon3"></span>
+                            <span class="icon-be icon4"></span>
+                        </div>
                     </div>
                     <div class="list-chair module-chair">
                         <div class="identity">
                             <span class="identity-name">水民</span>
                             <span class="item-count">2号</span>
                         </div>
-                        <div class="operation"></div>
+                        <div class="operation">
+                            <span class="icon-be icon1"></span>
+                            <span class="icon-be icon2"></span>
+                            <span class="icon-be icon3"></span>
+                            <span class="icon-be icon4"></span>
+                        </div>
                     </div>
                     <div class="list-chair">
                         <div class="identity">
                             <span class="identity-name">警察</span>
                             <span class="item-count">3号</span>
                         </div>
-                        <div class="operation"></div>
+                        <div class="operation">
+                            <span class="icon-be icon1"></span>
+                            <span class="icon-be icon2"></span>
+                            <span class="icon-be icon3"></span>
+                            <span class="icon-be icon4"></span>
+                        </div>
                     </div>
                 </li>
                 <li class="item-list">
@@ -89,21 +114,36 @@
                             <span class="identity-name">水民</span>
                             <span class="item-count">1号</span>
                         </div>
-                        <div class="operation"></div>
+                        <div class="operation">
+                            <span class="icon-be icon1"></span>
+                            <span class="icon-be icon2"></span>
+                            <span class="icon-be icon3"></span>
+                            <span class="icon-be icon4"></span>
+                        </div>
                     </div>
                     <div class="list-chair module-chair">
                         <div class="identity">
                             <span class="identity-name">水民</span>
                             <span class="item-count">2号</span>
                         </div>
-                        <div class="operation"></div>
+                        <div class="operation">
+                            <span class="icon-be icon1"></span>
+                            <span class="icon-be icon2"></span>
+                            <span class="icon-be icon3"></span>
+                            <span class="icon-be icon4"></span>
+                        </div>
                     </div>
                     <div class="list-chair">
                         <div class="identity">
                             <span class="identity-name">警察</span>
                             <span class="item-count">3号</span>
                         </div>
-                        <div class="operation"></div>
+                        <div class="operation">
+                            <span class="icon-be icon1"></span>
+                            <span class="icon-be icon2"></span>
+                            <span class="icon-be icon3"></span>
+                            <span class="icon-be icon4"></span>
+                        </div>
                     </div>
                 </li>
                 <li class="item-list">
@@ -112,21 +152,36 @@
                             <span class="identity-name">水民</span>
                             <span class="item-count">1号</span>
                         </div>
-                        <div class="operation"></div>
+                        <div class="operation">
+                            <span class="icon-be icon1"></span>
+                            <span class="icon-be icon2"></span>
+                            <span class="icon-be icon3"></span>
+                            <span class="icon-be icon4"></span>
+                        </div>
                     </div>
                     <div class="list-chair module-chair">
                         <div class="identity">
                             <span class="identity-name">水民</span>
                             <span class="item-count">2号</span>
                         </div>
-                        <div class="operation"></div>
+                        <div class="operation">
+                            <span class="icon-be icon1"></span>
+                            <span class="icon-be icon2"></span>
+                            <span class="icon-be icon3"></span>
+                            <span class="icon-be icon4"></span>
+                        </div>
                     </div>
                     <div class="list-chair">
                         <div class="identity">
                             <span class="identity-name">警察</span>
                             <span class="item-count">3号</span>
                         </div>
-                        <div class="operation"></div>
+                        <div class="operation">
+                            <span class="icon-be icon1"></span>
+                            <span class="icon-be icon2"></span>
+                            <span class="icon-be icon3"></span>
+                            <span class="icon-be icon4"></span>
+                        </div>
                     </div>
                 </li>
                 <li class="item-list">
@@ -135,21 +190,36 @@
                             <span class="identity-name">水民</span>
                             <span class="item-count">1号</span>
                         </div>
-                        <div class="operation"></div>
+                        <div class="operation">
+                            <span class="icon-be icon1"></span>
+                            <span class="icon-be icon2"></span>
+                            <span class="icon-be icon3"></span>
+                            <span class="icon-be icon4"></span>
+                        </div>
                     </div>
                     <div class="list-chair module-chair">
                         <div class="identity">
                             <span class="identity-name">水民</span>
                             <span class="item-count">2号</span>
                         </div>
-                        <div class="operation"></div>
+                        <div class="operation">
+                            <span class="icon-be icon1"></span>
+                            <span class="icon-be icon2"></span>
+                            <span class="icon-be icon3"></span>
+                            <span class="icon-be icon4"></span>
+                        </div>
                     </div>
                     <div class="list-chair">
                         <div class="identity">
                             <span class="identity-name">警察</span>
                             <span class="item-count">3号</span>
                         </div>
-                        <div class="operation"></div>
+                        <div class="operation">
+                            <span class="icon-be icon1"></span>
+                            <span class="icon-be icon2"></span>
+                            <span class="icon-be icon3"></span>
+                            <span class="icon-be icon4"></span>
+                        </div>
                     </div>
                 </li>
                 <li class="item-list">
@@ -158,21 +228,36 @@
                             <span class="identity-name">水民</span>
                             <span class="item-count">1号</span>
                         </div>
-                        <div class="operation"></div>
+                        <div class="operation">
+                            <span class="icon-be icon1"></span>
+                            <span class="icon-be icon2"></span>
+                            <span class="icon-be icon3"></span>
+                            <span class="icon-be icon4"></span>
+                        </div>
                     </div>
                     <div class="list-chair module-chair">
                         <div class="identity">
                             <span class="identity-name">水民</span>
                             <span class="item-count">2号</span>
                         </div>
-                        <div class="operation"></div>
+                        <div class="operation">
+                            <span class="icon-be icon1"></span>
+                            <span class="icon-be icon2"></span>
+                            <span class="icon-be icon3"></span>
+                            <span class="icon-be icon4"></span>
+                        </div>
                     </div>
                     <div class="list-chair">
                         <div class="identity">
                             <span class="identity-name">警察</span>
                             <span class="item-count">3号</span>
                         </div>
-                        <div class="operation"></div>
+                        <div class="operation">
+                            <span class="icon-be icon1"></span>
+                            <span class="icon-be icon2"></span>
+                            <span class="icon-be icon3"></span>
+                            <span class="icon-be icon4"></span>
+                        </div>
                     </div>
                 </li>
                 <li class="item-list">
@@ -181,67 +266,36 @@
                             <span class="identity-name">水民</span>
                             <span class="item-count">1号</span>
                         </div>
-                        <div class="operation"></div>
+                        <div class="operation">
+                            <span class="icon-be icon1"></span>
+                            <span class="icon-be icon2"></span>
+                            <span class="icon-be icon3"></span>
+                            <span class="icon-be icon4"></span>
+                        </div>
                     </div>
                     <div class="list-chair module-chair">
                         <div class="identity">
                             <span class="identity-name">水民</span>
                             <span class="item-count">2号</span>
                         </div>
-                        <div class="operation"></div>
+                        <div class="operation">
+                            <span class="icon-be icon1"></span>
+                            <span class="icon-be icon2"></span>
+                            <span class="icon-be icon3"></span>
+                            <span class="icon-be icon4"></span>
+                        </div>
                     </div>
                     <div class="list-chair">
                         <div class="identity">
                             <span class="identity-name">警察</span>
                             <span class="item-count">3号</span>
                         </div>
-                        <div class="operation"></div>
-                    </div>
-                </li>
-                <li class="item-list">
-                    <div class="list-chair">
-                        <div class="identity">
-                            <span class="identity-name">水民</span>
-                            <span class="item-count">1号</span>
+                        <div class="operation">
+                            <span class="icon-be icon1"></span>
+                            <span class="icon-be icon2"></span>
+                            <span class="icon-be icon3"></span>
+                            <span class="icon-be icon4"></span>
                         </div>
-                        <div class="operation"></div>
-                    </div>
-                    <div class="list-chair module-chair">
-                        <div class="identity">
-                            <span class="identity-name">水民</span>
-                            <span class="item-count">2号</span>
-                        </div>
-                        <div class="operation"></div>
-                    </div>
-                    <div class="list-chair">
-                        <div class="identity">
-                            <span class="identity-name">警察</span>
-                            <span class="item-count">3号</span>
-                        </div>
-                        <div class="operation"></div>
-                    </div>
-                </li>
-                <li class="item-list">
-                    <div class="list-chair">
-                        <div class="identity">
-                            <span class="identity-name">水民</span>
-                            <span class="item-count">1号</span>
-                        </div>
-                        <div class="operation"></div>
-                    </div>
-                    <div class="list-chair module-chair">
-                        <div class="identity">
-                            <span class="identity-name">水民</span>
-                            <span class="item-count">2号</span>
-                        </div>
-                        <div class="operation"></div>
-                    </div>
-                    <div class="list-chair">
-                        <div class="identity">
-                            <span class="identity-name">警察</span>
-                            <span class="item-count">3号</span>
-                        </div>
-                        <div class="operation"></div>
                     </div>
                 </li>
                 <li class="buwei"></li>
@@ -252,21 +306,22 @@
         <div class="behaviar-btn"><button>投死</button></div>
     </footer>
 
-    <div class="over-turn" style="display:none">
+    <div class="over-turn">
         <div class="over-turn-header">
             <span class="menu"></span>
-            <span class="close"></span>
+            <span class="myclose"></span>
         </div>
         <div class="turn-choice">
             <div class="turn-choice-menu">
-                <p>确定要结束本轮游戏吗</p>
+                <p>确定要结束本轮游戏吗?</p>
                 <div class="turn-button">
                     <button class="yes">确定</button>
-                    <button class="yes">取消</button>
+                    <button class="no">取消</button>
                 </div>
             </div>
         </div>
     </div>
 </body>
-<script src="./js/player.js"></script>
+<script src="./js/control.js"></script>
+
 </html>
