--- a/cssXZ/Stage-two/gamejingling/result.html
+++ b/cssXZ/Stage-two/gamejingling/result.html
@@ -46,7 +46,7 @@
             <ul class="game-state">
                 <li class="mylist-group">
                     <div class="mygroup-item">
-                        <div class="day-count">第1天</div>
+                        <div class="day-count"><span>第1天</span><span class="game-time">0小时07分</span></div>
                         <div class="day-content">
                             <p>晚上: 5号被杀手杀死，5号是水民</p>
                             <p>白天: 8号被全民投票投死，8号是杀手</p>
@@ -55,7 +55,7 @@
                 </li>
                 <li class="mylist-group">
                     <div class="mygroup-item">
-                        <div class="day-count">第2天</div>
+                        <div class="day-count"><span>第2天</span><span class="game-time">0小时07分</span></div>
                         <div class="day-content">
                             <p>晚上: 5号被杀手杀死，5号是水民</p>
                             <p>白天: 8号被全民投票投死，8号是杀手</p>
