阶段二任务完成

--- a/cssXZ/Stage-two/gamejingling/result.html
+++ b/cssXZ/Stage-two/gamejingling/result.html
@@ -67,6 +67,7 @@
                 <span>第2天</span>
                 <span>0小时07分</span>
             </div>
+            <div class="zhanwei"></div>
         </div>
     </main>
     <footer>
