--- a/cssXZ/Stage-two/gamejingling/result.html
+++ b/cssXZ/Stage-two/gamejingling/result.html
@@ -34,8 +34,8 @@
                         </li>
                         <li>
                             <span>狙击手0人</span>
-                            <span>医　生1人</span
-                        ></li>
+                            <span>医　生1人</span>
+                        </li>
                         <li><span>卧底词汇: 爱新觉罗</span></li>
                         <li><span> 水民词汇: 努尔哈赤</span> </li>
                     </div>
