--- a/cssXZ/Stage-there/no_responsive/jinengshu.html
+++ b/cssXZ/Stage-there/no_responsive/jinengshu.html
@@ -9,35 +9,42 @@
     <script src="../../static/bootstrap/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../../static/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/my-font-size.css">
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/base.css">
     <link href="./css/jinengshu.css" rel="stylesheet">
 </head>
 
 <body>
+    <!-- 页面头部开始 -->
     <header>
         <div id="service">
-            <div id="tel">客服热线：010-594-78634</div>
-            <div id="contact">
-                <a href="#" id="icon-con-1"></a>
-                <a href="#" id="icon-con-2"></a>
-                <a href="#" id="icon-con-3"></a>
+            <div class="ser-row">
+                <div id="tel" class="col-xs-6">客服热线：010-594-78634</div>
+                <div id="contact" class="col-xs-12">
+                    <a href="#"><span id="icon-con-1"></span></a>
+                    <a href="#"><span id="icon-con-2"></span></a>
+                    <a href="#"><span id="icon-con-3"></span></a>
+                </div>
             </div>
         </div>
+        <nav>
+            <div class="ser-row">
+                <div id="home-logo" class="col-xs-6">
+                    <img src="./images/home-logo.png" alt="home-logo">
+                </div>
+                <div id="nav-step" class="col-xs-12">
+                    <li><a href="#">职业殿堂</a></li>
+                    <li><a href="#">线上学习</a></li>
+                    <li><a href="#">我的学院</a></li>
+                    <li><a href="#">学习资料</a></li>
+                    <li><a href="#">线下实战</a></li>
+                </div>
+            </div>
+        </nav>
     </header>
-    <nav>
-        <div id="home-logo">
-            <img src="./images/jinengshu/home-logo.png" alt="home-logo">
-        </div>
-        <div>
-            <li><a href="#">职业殿堂</a></li>
-            <li><a href="#">线上学习</a></li>
-            <li><a href="#">我的学院</a></li>
-            <li><a href="#">学习资料</a></li>
-            <li><a href="#">线下实战</a></li>
-        </div>
-    </nav>
-
-    <!-- bootstrap轮播图 -->
+    <!-- 页面头部结束 -->
+    <!-- ---------------------------------------------------------------------------------------------------- -->
+    <!-- bootstrap轮播图开始 -->
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -47,13 +54,13 @@
         </ol>
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img class="first-slide" src="./images/jinengshu/banner.jpg" alt="First slide">
+                <img class="first-slide" src="./images/banner.jpg" alt="First slide">
             </div>
             <div class="item">
-                <img class="second-slide" src="./images/jinengshu/banner.jpg" alt="Second slide">
+                <img class="second-slide" src="./images/banner.jpg" alt="Second slide">
             </div>
             <div class="item">
-                <img class="third-slide" src="./images/jinengshu/banner.jpg" alt="Third slide">
+                <img class="third-slide" src="./images/banner.jpg" alt="Third slide">
             </div>
         </div>
         <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
@@ -65,8 +72,9 @@
               <span class="sr-only">Next</span>
         </a>
     </div>
-    <!-- 轮播图结束 -->
-
+    <!-- bootstrap轮播图结束 -->
+    <!-- ------------------------------------------------------------------------------------------------------ -->
+    <!-- 页面main部分开始 -->
     <main>
         <div id="main-advantage" class="list-group">
             <div class="adv-item">
@@ -85,37 +93,70 @@
             </div>
             <div class="adv-item">
                 <div class="adv-item-img">
-                    <span class="icon-social"></span>
+                    <span id="icon-social"></span>
                 </div>
                 <div class="adv-item-title">人脉</div>
                 <p class="adv-item-content">同班好友，同院学长，技术大师，入学就混入职脉圈，为以后铺平道路。</p>
             </div>
             <div id="main-state">
-                <div id="learning">
-                    <span id="icon-people">12400</span>
-                    <span id="people-number">累计在线学习人数</span>
+                <div id="state-learning">
+                    <span class="icon-people">12400</span>
+                    <span class="people-number">累计在线学习人数</span>
                 </div>
-                <div id="working">
-                    <span id="icon-people">12400</span>
-                    <span id="people-number">学员已经找到满意工作</span>
+                <div id="state-working">
+                    <span class="icon-people">12400</span>
+                    <span class="people-number">学员已经找到满意工作</span>
                 </div>
             </div>
         </div>
         <div id="main-learning">
-            <div id="learn-title">如何学习</div>
-            <div id="learn-action">
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
+            <div id="learn-container">
+                <div id="learn-title">如何学习</div>
+                <div id="learn-action">
+                    <ul>
+                        <li>
+                            <span class="learn-round">1</span>
+                            <p>匹配你现在的个人情况寻找适合自己的岗位</p>
+                            <span class="learn-next"></span>
+                        </li>
+                        <li>
+                            <span class="learn-round">2</span>
+                            <p>了解职业前景、薪金待遇、 竞争压力等</p>
+                            <span class="learn-next"></span>
+                        </li>
+                        <li>
+                            <span class="learn-round">3</span>
+                            <p>掌握行业内顶尖技能</p>
+                            <span class="learn-next"></span>
+                        </li>
+                        <li>
+                            <span class="learn-round">4</span>
+                            <p>查看职业日报</p>
+                            <span class="learn-next"></span>
+                        </li>
+                        <li>
+                            <span class="learn-round">5</span>
+                            <p>参考学习资源，掌握技能点，逐个完成任务</p>
+                            <span class="learn-next"></span>
+                        </li>
+                        <li>
+                            <span class="learn-round">6</span>
+                            <p>加入班级，和小伙伴们互相帮助，一块学习</p>
+                            <span class="learn-next"></span>
+                        </li>
+                        <li>
+                            <span class="learn-round">7</span>
+                            <p>选择导师，一路引导，加速自己成长</p>
+                            <span class="learn-next"></span>
+                        </li>
+                        <li>
+                            <span class="learn-round">8</span>
+                            <p>完成职业技能，升级业界大牛</p>
+                            <span class="learn-next"></span>
+                        </li>
+                    </ul>
+                </div>
             </div>
-
         </div>
         <div id="main-display">
 
@@ -123,12 +164,50 @@
         <div id="main-company">
 
         </div>
+        <div id="main-frienddlink">
 
-
+        </div>
     </main>
+    <!-- 页面main部分结束 -->
+    <!-- ---------------------------------------------------------------------------------------------------- -->
+    <!-- footer开始 -->
     <footer>
-
+        <div id="footer-content">
+            <div id="footer-about">
+                <p class="footer-title">
+                    <a href="#">技能树</a>|<a href="#">IT修真院</a>
+                </p>
+                <p class="footer-item">
+                    <a href="#">关于我们</a>|<a href="#">联系我们</a>|<a href="#">合作公司</a>
+                </p>
+                <p class="footer-item">
+                    <a href="#">新人必读</a>|<a href="">学院公告</a>
+                </p>
+            </div>
+            <div id="footer-app">
+                <p class="footer-title">
+                    <a href="#">旗下网站</a>
+                </p>
+                <p class="footer-item">
+                    <a href="#">葡萄藤</a><a href="#">葡萄藤轻游戏</a>
+                </p>
+                <p class="footer-item">
+                    <a href="#">萝卜多</a><a href="#">草船云孵化器</a>
+                </p>
+                <p class="footer-item">
+                    <a href="#">桌游精选</a><a href="#">精选日报</a>
+                </p>
+            </div>
+            <div id="footer-weixin">
+                <p class="footer-title">微信公众平台</p>
+                <img src="./images/weixin.jpg" alt="">
+            </div>
+        </div>
+        <div id="footer-copyright">
+            <p>Copyright © 2015 北京葡萄藤信息技术有限公司 All Rights Reserved | 京ICP备15035574号-1</p>
+        </div>
     </footer>
+    <!-- footer结束 -->
 </body>
 
 </html>
