--- a/cssXZ/Stage-there/no_responsive/jinengshu.html
+++ b/cssXZ/Stage-there/no_responsive/jinengshu.html
@@ -52,15 +52,15 @@
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
         </ol>
-        <div class="carousel-inner" role="listbox">
+        <div class="carousel-inner">
             <div class="item active">
-                <img class="first-slide" src="./images/banner.jpg" alt="First slide">
+                <img src="./images/banner.jpg" alt="First slide">
             </div>
             <div class="item">
-                <img class="second-slide" src="./images/banner.jpg" alt="Second slide">
+                <img src="./images/banner.jpg" alt="Second slide">
             </div>
             <div class="item">
-                <img class="third-slide" src="./images/banner.jpg" alt="Third slide">
+                <img src="./images/banner.jpg" alt="Third slide">
             </div>
         </div>
         <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
@@ -76,7 +76,7 @@
     <!-- ------------------------------------------------------------------------------------------------------ -->
     <!-- 页面main部分开始 -->
     <main>
-        <div id="main-advantage" class="list-group">
+        <div id="main-advantage">
             <div class="adv-item">
                 <div class="adv-item-img">
                     <span id="icon-efficiency"></span>
@@ -111,7 +111,7 @@
         </div>
         <div id="main-learning">
             <div id="learn-container">
-                <div id="learn-title">如何学习</div>
+                <div class="main-title">如何学习</div>
                 <div id="learn-action">
                     <ul>
                         <li>
@@ -132,8 +132,9 @@
                         <li>
                             <span class="learn-round">4</span>
                             <p>查看职业日报</p>
-                            <span class="learn-next"></span>
                         </li>
+                    </ul>
+                    <ul>
                         <li>
                             <span class="learn-round">5</span>
                             <p>参考学习资源，掌握技能点，逐个完成任务</p>
@@ -152,20 +153,96 @@
                         <li>
                             <span class="learn-round">8</span>
                             <p>完成职业技能，升级业界大牛</p>
-                            <span class="learn-next"></span>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
         <div id="main-display">
-
+            <div id="display-container">
+                <div class="main-title">优秀学员展示</div>
+                <ul id="display-list">
+                    <li class="display-item">
+                        <img src="./images/icon1.png" alt="touxiang">
+                        <div class="display-identity">技术顾问：罗大佑</div>
+                        <p class="display-content">百度技术总监：互联网基础 服务领域，从事虚拟主机、 云服务器、域名。 曾任新网 高级技术经理，负责技术研 发、团队管理与建设。</p>
+                    </li>
+                    <li class="display-item">
+                        <img src="./images/icon2.png" alt="touxiang">
+                        <div class="display-identity">技术顾问：罗大佑</div>
+                        <p class="display-content">百度技术总监：互联网基础 服务领域，从事虚拟主机、 云服务器、域名。 曾任新网 高级技术经理，负责技术研 发、团队管理与建设。</p>
+                    </li>
+                    <li class="display-item">
+                        <img src="./images/icob3.png" alt="touxiang">
+                        <div class="display-identity">技术顾问：罗大佑</div>
+                        <p class="display-content">百度技术总监：互联网基础 服务领域，从事虚拟主机、 云服务器、域名。 曾任新网 高级技术经理，负责技术研 发、团队管理与建设。</p>
+                    </li>
+                    <li class="display-item">
+                        <img src="./images/icon4.png" alt="touxiang">
+                        <div class="display-identity">技术顾问：罗大佑</div>
+                        <p class="display-content">百度技术总监：互联网基础 服务领域，从事虚拟主机、 云服务器、域名。 曾任新网 高级技术经理，负责技术研 发、团队管理与建设。</p>
+                    </li>
+                </ul>
+                <div id="point">
+                    <span class="display-point getthis"></span>
+                    <span class="display-point"></span>
+                    <span class="display-point"></span>
+                    <span class="display-point"></span>
+                </div>
+            </div>
+        </div>
         </div>
         <div id="main-company">
-
+            <div id="company-container">
+                <div class="main-title">战略合作企业</div>
+                <div id="container-img">
+                    <a href="#"><img src="./images/001.jpg" alt="tupian"></a>
+                    <a href="#"><img src="./images/002.jpg" alt="tupian"></a>
+                    <a href="#"><img src="./images/003.jpg" alt="tupian"></a>
+                    <a href="#"><img src="./images/004.jpg" alt="tupian"></a>
+                    <a href="#"><img src="./images/005.jpg" alt="tupian"></a>
+                </div>
+            </div>
+        </div>
         </div>
         <div id="main-frienddlink">
-
+            <div id="frienddlink-container">
+                <div class="main-title">友情链接</div>
+                <div id="list-groups">
+                    <div class="link-list">
+                        <ul>
+                            <li>手机软件</li>
+                            <li>教师招聘</li>
+                            <li>找工作</li>
+                            <li>手机软件</li>
+                            <li>教师招聘</li>
+                        </ul>
+                        <ul>
+                            <li>手机软件</li>
+                            <li>教师招聘</li>
+                            <li>找工作</li>
+                            <li>手机软件</li>
+                            <li>教师招聘</li>
+                        </ul>
+                    </div>
+                    <div class="link-list">
+                        <ul>
+                            <li>手机软件</li>
+                            <li>教师招聘</li>
+                            <li>找工作</li>
+                            <li>手机软件</li>
+                            <li>教师招聘</li>
+                        </ul>
+                        <ul>
+                            <li>手机软件</li>
+                            <li>教师招聘</li>
+                            <li>找工作</li>
+                            <li>手机软件</li>
+                            <li>教师招聘</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <!-- 页面main部分结束 -->
