任务八修改

--- a/cssXZ/Stage-three/no-responsive/jinengshu.html
+++ b/cssXZ/Stage-three/no-responsive/jinengshu.html
@@ -33,9 +33,9 @@
                     <img src="./images/home-logo.png" alt="home-logo">
                 </div>
                 <div id="nav-step" class="col-xs-12">
+                    <li><a href="http://www.xxblog.site/itxiuzhen/cssXZ/Stage-three/no-responsive/jinengshu.html">网站首页</a></li>
                     <li><a href="http://www.xxblog.site/itxiuzhen/cssXZ/Stage-three/no-responsive/companylist.html">合作伙伴</a></li>
                     <li><a href="http://www.xxblog.site/itxiuzhen/cssXZ/Stage-three/no-responsive/zhiyeliebiao2.html">职业殿堂</a></li>
-                    <li><a href="#">我的学院</a></li>
                     <li><a href="#">学习资料</a></li>
                     <li><a href="#">线下实战</a></li>
                 </div>
