任务八修改

--- a/cssXZ/Stage-three/no-responsive/companylist.html
+++ b/cssXZ/Stage-three/no-responsive/companylist.html
@@ -56,7 +56,7 @@
                     <ul>
                         <li class="list-item"><span class="point-round"></span><a href="#">阿里巴巴</a></li>
                         <li class="list-item"><span class="point-round"></span><a href="#">腾讯视频</a></li>
-                        <li class="list-item hot"><span class="point-round"></span><a href="#">土豆网</a></li>
+                        <li class="list-item hot"><span class="point-round"></span><a href="#" class="hot">土豆网</a></li>
                         <li class="list-item"><span class="point-round"></span><a href="#">北京葡萄藤</a></li>
                         <li class="list-item"><span class="point-round"></span><a href="#">阿里巴巴</a></li>
                         <li class="list-item"><span class="point-round"></span><a href="#">腾讯视频</a></li>
