--- a/cssXZ/Stage-three/reaponaive/jinengshu.html
+++ b/cssXZ/Stage-three/reaponaive/jinengshu.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="../../static/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/my-font-size.css">
     <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" media="screen and (min-width : 790px)" href="./css/base.css">
+    <link rel="stylesheet" media="screen and (max-width : 790px)" href="./css/media-base.css">
     <link href="./css/jinengshu.css" rel="stylesheet">
 </head>
 
@@ -18,9 +19,9 @@
     <!-- 页面头部开始 -->
     <header>
         <div id="service">
-            <div class="ser-row">
-                <div id="tel" class="col-xs-6">客服热线：010-594-78634</div>
-                <div id="contact" class="col-xs-12">
+            <div class="ser-row row alldis">
+                <div id="tel" class="col-xs-7">客服热线：010-594-78634</div>
+                <div id="contact" class="col-xs-5">
                     <a href="#"><span id="icon-con-1"></span></a>
                     <a href="#"><span id="icon-con-2"></span></a>
                     <a href="#"><span id="icon-con-3"></span></a>
@@ -28,11 +29,11 @@
             </div>
         </div>
         <nav>
-            <div class="ser-row">
+            <div class="ser-row row not-mobile">
                 <div id="home-logo" class="col-xs-6">
                     <img src="./images/home-logo.png" alt="home-logo">
                 </div>
-                <div id="nav-step" class="col-xs-12">
+                <div id="nav-step" class="col-xs-6">
                     <li><a href="#">职业殿堂</a></li>
                     <li><a href="#">线上学习</a></li>
                     <li><a href="#">我的学院</a></li>
@@ -40,42 +41,58 @@
                     <li><a href="#">线下实战</a></li>
                 </div>
             </div>
+            <div class="menu-mobile mobile">
+                <div id="mob-home-logo">
+                    <img src="./images/home-logo.png" alt="home-logo">
+                </div>
+                <div id="mob-nav-step">
+                    <span id="myMBtn" class="glyphicon glyphicon-menu-hamburger"></span>
+                    <div id="menu-list">
+                        <li><a href="#">职业殿堂</a></li>
+                        <li><a href="#">线上学习</a></li>
+                        <li><a href="#">我的学院</a></li>
+                        <li><a href="#">学习资料</a></li>
+                        <li><a href="#">线下实战</a></li>
+                    </div>
+                </div>
+            </div>
         </nav>
     </header>
     <!-- 页面头部结束 -->
-    <!-- ---------------------------------------------------------------------------------------------------- -->
-    <!-- bootstrap轮播图开始 -->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="item active">
-                <img src="./images/banner.jpg" alt="First slide">
-            </div>
-            <div class="item">
-                <img src="./images/banner.jpg" alt="Second slide">
-            </div>
-            <div class="item">
-                <img src="./images/banner.jpg" alt="Third slide">
-            </div>
-        </div>
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-        </a>
-    </div>
-    <!-- bootstrap轮播图结束 -->
-    <!-- ------------------------------------------------------------------------------------------------------ -->
+
     <!-- 页面main部分开始 -->
     <main>
+            <!-- ---------------------------------------------------------------------------------------------------- -->
+    <!-- bootstrap轮播图开始 -->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img src="./images/banner.jpg" alt="First slide">
+                </div>
+                <div class="item">
+                    <img src="./images/banner.jpg" alt="Second slide">
+                </div>
+                <div class="item">
+                    <img src="./images/banner.jpg" alt="Third slide">
+                </div>
+            </div>
+            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+            </a>
+        </div>
+        <!-- bootstrap轮播图结束 -->
+        <!-- ------------------------------------------------------------------------------------------------------ -->
         <div id="main-advantage">
             <div class="adv-item">
                 <div class="adv-item-img">
@@ -285,6 +302,7 @@
         </div>
     </footer>
     <!-- footer结束 -->
+    <script src="./js/menu.js"></script>
 </body>
 
 </html>
