--- a/cssXZ/Stage-four/task-2/mylist/mylist.html
+++ b/cssXZ/Stage-four/task-2/mylist/mylist.html
@@ -8,7 +8,7 @@
     <script src="../../static/jquery.min.js"></script>
     <script src="../../static/bootstrap/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../../static/bootstrap/css/bootstrap.min.css">
-    <link href="style.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
 </head>
 
 <body>
